# Full-stack-Todo-app-01

./: CLAUDE.md  README.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260124_0001_create_chatbot_tables.py
backend/src/: main.py
backend/src/agent/: config.py  runner.py
backend/src/api/: __init__.py  main.py  routes.py  schemas.py
backend/src/mcp/: server.py
backend/src/models/: __init__.py  conversation.py  message.py
backend/src/services/: __init__.py  auth.py  context.py  database.py
frontend/: .env.local.example  .eslintignore  .prettierignore  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/todos/: page.tsx
frontend/src/components/: ChatInterface.tsx  InputBox.tsx  MessageList.tsx
frontend/src/services/: api.ts  auth.ts
frontend/src/types/: chat.ts
history/prompts/001-ai-todo-chatbot/: 0001-ai-todo-chatbot-spec-creation.spec.prompt.md  0002-ai-todo-chatbot-implementation-plan.plan.prompt.md  0003-ai-todo-chatbot-task-breakdown.tasks.prompt.md  0004-phase-1-setup-implementation.green.prompt.md  0005-phase-2-foundational-implementation.green.prompt.md  0006-backend-user-stories-implementation.green.prompt.md
specs/001-ai-todo-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ai-todo-chatbot/checklists/: requirements.md
specs/001-ai-todo-chatbot/contracts/: api.openapi.yaml  mcp-tools.json
